# FABulous

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  FABulous.py  LICENSE  README.md  pyproject.toml  requirements.txt
FABulous/: FABulous.py  FABulous_API.py
FabricGeneratorExtensions/: bitStream.txt  bitstreamgen.py  modelling.py
docs/: FABulous_docker.md  Makefile  VPR_flow.md  environment.yml  requirements.txt
fabric/: CLB_switch_matrix.csv.test  CLB_switch_matrix.vhdl  CLB_tile.vhdl  CPU_IO_ConfigMem.csv  CPU_IO_ConfigMem.init.csv  CPU_IO_switch_matrix.csv  CPU_IO_switch_matrix.xls  DSP_bot_ConfigMem.init.csv  DSP_bot_switch_matrix.csv  DSP_bot_switch_matrix.list  DSP_top_switch_matrix.csv  E_term_single_switch_matrix.vhdl  E_term_single_tile.vhdl  E_term_tile.vhdl  IO_switch_matrix.vhdl  IO_tile.vhdl  InPassFlop2.vhdl  LUT4AB_ConfigMem.csv  LUT4AB_ConfigMem.init.csv  LUT4AB_ConfigMem_.csv  LUT4AB_switch_matrix.csv.bak  LUT4AB_switch_matrix.list.same_jump_wire_port_names  LUT4AB_switch_matrix_latch.vhdl  N_term_IO_tile.vhdl  N_term_single2_switch_matrix.csv  N_term_single2_switch_matrix.list  N_term_tile.vhdl  RegFile_switch_matrix.csv  S_term_IO_switch_matrix.vhdl  S_term_single2_ConfigMem.init.csv  S_term_single2_ConfigMem.vhdl  S_term_single_ConfigMem.vhdl  S_term_single_switch_matrix.vhdl  W_IO_switch_matrix.csv  W_term_single_switch_matrix.csv  W_term_single_tile.vhdl  W_term_switch_matrix.csv  W_term_switch_matrix.vhdl  W_term_tile.vhdl  bit_pre.tcl  (+17 more)
fabric_cad/: bit_gen.py
fabric_files/: README.md
fabric_generator/: .gitignore  README.md  (+33 more)
(+1205 files in other folders)
